2018-01-08         Arnold D. Robbins     <arnold@skeeve.com>

	* First version.